LightBDD
===========================================

Version 2.3.4
----------------------------------------
Summary:
+ #98 Lifted requirement for parameterized constructors in LightBDD.XUnit2 FeatureFixture
Details:
+ #98 (XUnit2)(Change) Added parameter-less constructor to FeatureFixture
+ #98 (VSIX)(Change) Updated LightBDD.XUnit2 feature tempaltes to generate classes without parameterized constructor

Version 2.3.3
----------------------------------------
Summary:
+ #69 Simplified exception stack trace for failed scenarios
+ #90 Improved integration with NCrunch
+ #92 Improved support for extension methods used as steps
+ #94 Added support for disposable scenario and step context instances
Details:
+ #69 (Core)(Change) Exposed DefaultExceptionFormatter with ability to filter stack trace members and limit number of printed stack trace lines. Excluded async exception rethrow frames by default (reports and progress notifers)
+ #69 (Core)(New) Introduced ScenarioExecutionException to be used to propagate scenario/step exceptions without recording LightBDD internal frames
+ #69 (Framework)(Change) Simplified exception stack trace for basic/extended/fluent step syntax and sync/async runners
+ #69 (all integrations)(Change) Configured DefaultExceptionFormatter to exclude underlying test framework assertion frames from reports and progress notifiers
+ #69 (Core)(Change) Changed minimal required .NET Standard version from 1.1 to 1.3
+ #90 (Core)(Change) Allowed to install new FeatureCoordinator when previous one is disposed in order to allow NCrunch reusing the same process to run LightBDD multiple times
+ #92 (Core)(Change) Excluded 'this' argument from step name display when extension method is used
+ #92 (Core)(Change) Corrected parameter placement in name when having appended parameter of lower index than matching in-text replacement at the end of the name, like: void Step_with_param(string other, string param)